syntax = "proto3";

package forest.forest;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "forest/forest/params.proto";

option go_package = "forest/x/forest/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/forest/forest/params";
  
  }
  
  // Queries a list of SayHello items.
  rpc SayHello (QuerySayHelloRequest) returns (QuerySayHelloResponse) {
    option (google.api.http).get = "/forest/forest/say_hello/{name}";
  
  }
  
  // Queries a list of Say items.
  rpc Say (QuerySayRequest) returns (QuerySayResponse) {
    option (google.api.http).get = "/forest/forest/say/{name}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QuerySayHelloRequest {
  string name = 1;
}

message QuerySayHelloResponse {
  string name = 1;
}

message QuerySayRequest {
  string name = 1;
}

message QuerySayResponse {
  string name = 1;
}

